--- a/webdesign/Post-MoneyLab_0105/lambdaCSS.css
+++ b/webdesign/Post-MoneyLab_0105/lambdaCSS.css
@@ -313,7 +313,7 @@ body{
 
 /*******THE CONTENT********************/
 	#content {
-        opacity: 0;
+        /*opacity: 0;*/
 /*
 		margin-left: 5%;
 		margin-right: -10%;
