--- a/webdesign/Post-MoneyLab_0105/lambdaCSS.css
+++ b/webdesign/Post-MoneyLab_0105/lambdaCSS.css
@@ -89,7 +89,7 @@ a:hover {
     /*height: auto; */
     overflow: hidden;
     padding-bottom: 100px;
-    background-color:rgba(255, 51, 0, 0.12);
+    background-color:white;
     -webkit-box-shadow: 2px 20px 15px 8px rgba(255, 35, 35, 0.35) !important;
     -moz-box-shadow: 2px 20px 15px 8px rgba(217, 217, 217, 0.35) !important;
     box-shadow: 2px 20px 15px 8px rgba(217, 217, 217, 0.35) !important;
