commit on select box

--- a/webdesign/ongoing prototype/lambdaCSS.css
+++ b/webdesign/ongoing prototype/lambdaCSS.css
@@ -27,6 +27,10 @@
 			font-size: 1em;
 		}
 
+		.underline {
+			background-color: yellow;
+		}
+
 /*******HORIZONTAL SCROLLBAR**********
 ********FOR THE CHAPTERS*************/
 		.horizScroll, .subScroll {
