--- a/webdesign/Post-MoneyLab_0105/lambdaCSS.css
+++ b/webdesign/Post-MoneyLab_0105/lambdaCSS.css
@@ -75,7 +75,7 @@ a, a:visited{
 
 a:hover, a:active,  a:focus  {
     color:#ff3300;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 
@@ -94,7 +94,6 @@ a:hover, a:active,  a:focus  {
     padding-bottom: 40px;
 
     background-color: white;
-    color:#ff3300;
 /*      -webkit-box-shadow: 2px 20px 15px 8px rgba(255, 255, 255, 0.61) !important;
          -moz-box-shadow: 2px 20px 15px 8px rgba(255, 255, 255, 0.61) !important;
          box-shadow: 2px 20px 15px 8px rgba(255, 255, 255, 0.61) !important; */
@@ -140,6 +139,14 @@ a:hover, a:active,  a:focus  {
     white-space: nowrap;
     word-break: keep-all;
     line-height: 2em;
+}
+
+#info-box a{
+    color:black;
+}
+
+#info-box a:hover{
+    color: #f30;
 }
 
 /***********************************
@@ -219,8 +226,8 @@ Defines the typography for texts in reader */
     background-color:#a5a5a5;  */
 vertical-align: middle;
     border-radius: 10px;
-    font-family: "Georgia";
-    letter-spacing: 2%;
+/*     font-family: "Georgia";
+     */    letter-spacing: 2%;
 }
 
 .shadow{
@@ -335,7 +342,8 @@ body{
          */   
         color: black;
     background-color:#fafafa;
-        background-color:#f4f4f4;
+    background-color:#f4f4f4;
+        background-color: white;
     }	
 
 /*******THE CONTENT********************/
@@ -375,7 +383,7 @@ body{
 }
 
 .horizScroll {
-    background-color:rgba(172, 172, 172, 0.24);
+    background-color:rgba(255,51,0, 0.4);
     border-radius: 5px;
     /*margin-left: -5px;*/
 }
@@ -384,6 +392,10 @@ body{
 .subScroll {
     border-radius: 5px;
     background-color: rgba(255, 69, 0, 0.23);
+}
+
+.horizScroll, .subScroll{
+    color:white;
 }
 
 #toc_wrapper {
@@ -421,6 +433,10 @@ body{
     padding-left: 10px;
 }
 
+#toc_wrapper h2:hover .toc_author{
+    color:white;
+}
+
 a.page-scroll > h2 {
     font-weight: 400;
 }
@@ -449,7 +465,6 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
     height: 100%;
     position:fixed;
     overflow: hidden;
-    background-color:rgb(255, 212, 193);
     background-color:#e6e6e6;
     /* -webkit-box-shadow: 10px 0px 31px -10px rgba(61,61,61,0.67);
 -moz-box-shadow: 10px 0px 31px -10px rgba(61,61,61,0.67);
@@ -520,9 +535,8 @@ Table of content is contained in pushmenu, it shows the different parts of the b
 
 /* Table of contents: when the user goes over a part of the book */
 #menu h2:hover{
-    border:1px solid #ff3300;
-    color:black;
-    background-color:white;
+    color:white;
+    background-color:#ff3300;
     cursor: pointer;
 }
 
@@ -1135,14 +1149,20 @@ input:hover {
 
 
      .capitalism, .capital, .creativity, .art, .contemporary, .culture, .ideological, .social, .labor, .attention, .image, .production, .capitalism, .art, .state, .life, .public, .city, .economics, .production, .development, .art, .social, .avant-garde, .world, .big, .Other, .art, .urban, .cultural, .project, .creativity, .Belgrade, .Rog, .capital, .creative, .collective, .urban, .factory, .gentrification, .art, .political, .social, .culture, .autonomy, .public, .work {
-        color: #1c4ee5;
-         
+         color: #1C33E5;
     }
 
 /********CITATIONS************************/
 
     .underline {
-        background-color: turquoise;
+        background-color:
+            /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffaa+5,ffffaa+52,ffffaa+95,ffffff+100 */
+            background: rgb(255,255,255); /* Old browsers */
+        background: -moz-linear-gradient(left,  rgba(255,255,255,1) 0%, rgba(255,255,170,1) 5%, rgba(255,255,170,1) 52%, rgba(255,255,170,1) 95%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,170,1) 5%,rgba(255,255,170,1) 52%,rgba(255,255,170,1) 95%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,170,1) 5%,rgba(255,255,170,1) 52%,rgba(255,255,170,1) 95%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
+
     }
 
 	button {
@@ -1245,18 +1265,24 @@ input:hover {
      */
     padding:0px 3px 5px 3px;
     position: absolute;
-    font-family: "Verdana";
-    font-size:9px;
-    line-height: 12px;
+    font-family: "HKGroteskbold";
+    font-size: 1.25em;
+    line-height: 1.2em;
     word-wrap:break-word;
     hyphens: auto;
     line-break: strict;
     word-break:break-word;
     border-radius: 8px;
-    background-color:white;
-    /*padding-top: 0;*/
+    background-color: white;
 }
 
+#chapter8 ol li p{
+    color: black;
+    font-family: "Georgia, serif";
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 1.1em;
+}
 .sidenote {
     opacity: 0;
     left: 40px;
@@ -1266,15 +1292,6 @@ input:hover {
     margin-bottom: 0px;
     padding-bottom: 0px;
 }
-
-#chapter8 ol li p {
-	/*margin: 0;*/
-    font-family: "Verdana";
-    font-size:9px;
-    line-height: 12px;
-}
-
-
 
 .footnoteRef{
     text-decoration: none;
@@ -1300,9 +1317,17 @@ input:hover {
 
 
 
-sup{
-    font-size:11px;
-    line-height: 1em;
+a sup{
+    vertical-align: super;
+    font-weight: bold;
+    color: black;
+    font-family: "HkgroteskBold";
+    text-decoration: none;
+}
+
+a sup:hover{
+    color:#f30;
+    text-decoration: none;
 }
 
 li{
@@ -1319,6 +1344,35 @@ ol {
 }
 
 /******** TUNNING BOOTSTRAP ********/
+
+.btn-group-vertical .btn-primary {
+    color: black;
+    background-color: #f4f4f4;
+    border: 0px solid #a0a0a0;
+    text-align: left;
+    text-transform: none;
+    
+}
+
+.btn-group-vertical .btn-primary:hover{
+    background-color: #e6e6e6;
+    cursor: pointer;
+    border-color: #a0a0a0;
+    color: black;
+    text-transform: none;
+    border: 0px solid #a0a0a0;
+}
+
+.btn-group-vertical .btn-primary:active{
+    color: black;
+    background-color:#f4f4f4; !important;
+}
+
+.btn-primary:focus{
+    color: black;
+    background-color:#f4f4f4; !important;
+}
+
 .section .btn-default {
     background-color: #dbdbdb;
     border-radius:5px;
@@ -1340,7 +1394,7 @@ ol {
 }
 
 .extra{
-    background-color: rgba(255, 51, 0, 0.3);
+    background-color: #dbdbdb;
     border-radius:5px;
     padding: 5px;
     padding-top:2px;
@@ -1351,8 +1405,6 @@ ol {
 }
 
 .extra:hover{
-    color: #ffffff;
-    background-color: #ff3300;
     text-decoration: none;
     color: black;
 }
@@ -1375,8 +1427,7 @@ ol {
 /*     background-color:  #f4f4f4;
     background-color:rgba(255, 78, 0, 0.25); */
     border:none;
-    background-color: #ffd5c9;
-    border-left:1px solid #ff3300;
+    background-color: #e6e6e6;
 
 }
 
@@ -1402,27 +1453,20 @@ ol {
 
 .panel-body{
     font-size: 13px;
-    background-color: #fff7f5;
-    border-radius: 8px;
+    background-color: #ffffff;
+    border-radius: 4px;
     padding: 8px;
     border:none;
-
+    color: black;
 }
 
-.panel-body p{
-    margin: 0px;
-    padding-top:5px;
-    background-color: transparent;
-    border:none;
-}
 
 .panel-default>.panel-heading{
-    color: #333;
 /*     background-color: #f5f5f5;
      */    border-color: black;
-    border-radius: 8px;
+    border-radius: 4px;
     padding: 7px;
-    background-color: #ffb9a5;
+    background-color: #f4f4f4;
     border:none;
 }
 .panel-default>.panel-heading a:hover, .panel-default>.panel-heading a:focus{
@@ -1431,9 +1475,12 @@ ol {
 }
 
 .panel-body p{
+    margin: 0px;
+    padding-top:5px;
+    border:none;
     font-size:11px;
     background-color: transparent;
-
+    color: black;
 }
 
 .panel-title {
@@ -1441,6 +1488,7 @@ ol {
     margin-bottom: 0;
     font-size: 14px;
     color: inherit;
+    color: black;
 }
 
 
