end of lenas day hihihi

--- a/webdesign/Post-MoneyLab_0105/lambdaCSS.css
+++ b/webdesign/Post-MoneyLab_0105/lambdaCSS.css
@@ -93,7 +93,7 @@ a:hover, a:active,  a:focus  {
     overflow: hidden;
     padding-bottom: 40px;
 
-    background-color: white;
+    background-color: rgb(255, 184, 166);
 /*      -webkit-box-shadow: 2px 20px 15px 8px rgba(255, 255, 255, 0.61) !important;
          -moz-box-shadow: 2px 20px 15px 8px rgba(255, 255, 255, 0.61) !important;
          box-shadow: 2px 20px 15px 8px rgba(255, 255, 255, 0.61) !important; */
@@ -196,8 +196,11 @@ a:hover, a:active,  a:focus  {
 Defines the typography for texts in reader */
 
 .section{
-    font-size: 62.5%;
+    font-size: 65.5%;
     clear: left;
+/*     border-left:1px solid #f4f4f4;
+    border-right:1px solid #f4f4f4;
+     */
     /*text-align: justify;
     text-justify: inter-word;*/
     /*padding-left: 2%; */
@@ -268,26 +271,55 @@ vertical-align: middle;
 .section .author {
 	margin-left: 0;
 	margin-right: 0;
-    color:lightgray;
+    color:#8e8e8e;
     font-size: 1.7em;
 }
 
 /* words: the way the words contained in each chapter display */
 .section .words {
     font-size: 1.7em;
-    color:lightgray;
-	text-decoration: none;
+    color:#8e8e8e;
+    text-decoration: none;
     margin-bottom: 14px;
 }
 
 
 .references {
-	font-size: 0.7em;
-	text-indent: 20px;
-    margin-bottom: 100px;
+    margin-bottom: 0px;
+    padding-bottom: 60px;
     margin-top:40px;
+    -webkit-column-gap: 20px;
+    -moz-column-gap: 20px;
+    column-gap: 20px;
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    border-bottom: 1px solid #dbdbdb;
 }
 
+.references p{
+    font-size: 1.2em;
+    line-height: 1.4em;
+    hyphens: auto;
+    word-wrap: break-word;
+}
+
+.references a{
+    color:black;
+    text-decoration: underline;
+}
+
+.references a:hover{
+    color:#f30;
+    text-decoration: none;
+}
+
+.references h3{
+    margin-top: 0px;
+    padding-top: 0px;
+    -webkit-margin-before: 0px;
+    font-size: 16px;
+}
 /****************************
      4-3. IMAGES IN TEXT
 *****************************
@@ -342,8 +374,6 @@ body{
          */   
         color: black;
     background-color:#fafafa;
-    background-color:#f4f4f4;
-        background-color: white;
     }	
 
 /*******THE CONTENT********************/
@@ -606,10 +636,10 @@ box-shadow: 10px 0px 31px -10px rgba(61,61,61,0.67); */
             /*display: none;*/
     /*cursor: pointer;*/
     /*display: block-inline;*/
-    background-color:#00EACE;/*
+            background-color:#f30;
+            /*
     background-color:rgb(66, 66, 255);
     background-color: #ff3b22;*/
-    opacity: .7;
     height: 0%;
     /*max-height: 100%;*/
     width: 5px;
@@ -1100,9 +1130,19 @@ input:hover {
 *************************************/
     .in-text {
     border-bottom: dashed 1px black;
-    /*background-color: yellow !important;*/
+        color:black !important;
+
     }
 
+.in-text a{
+    color:black !important;
+}
+
+.in-text:hover, .in-text a:hover{
+    color:#f30 !important;
+    border-bottom: dashed 1px #f30;
+
+}
 /********THE BOX**********************/
     .tip {
     background-color: #e8e8e8;
@@ -1157,12 +1197,12 @@ input:hover {
     .underline {
         background-color:
             /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffaa+5,ffffaa+52,ffffaa+95,ffffff+100 */
-            background: rgb(255,255,255); /* Old browsers */
-        background: -moz-linear-gradient(left,  rgba(255,255,255,1) 0%, rgba(255,255,170,1) 5%, rgba(255,255,170,1) 52%, rgba(255,255,170,1) 95%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,170,1) 5%,rgba(255,255,170,1) 52%,rgba(255,255,170,1) 95%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,170,1) 5%,rgba(255,255,170,1) 52%,rgba(255,255,170,1) 95%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
-
+           /*  background: rgb(255,255,255); Old browsers
+                    background: -moz-linear-gradient(left,  rgba(255,255,255,1) 0%, rgba(255,255,170,1) 5%, rgba(255,255,170,1) 52%, rgba(255,255,170,1) 95%, rgba(255,255,255,1) 100%); FF3.6-15
+                    background: -webkit-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,170,1) 5%,rgba(255,255,170,1) 52%,rgba(255,255,170,1) 95%,rgba(255,255,255,1) 100%); Chrome10-25,Safari5.1-6
+                    background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,170,1) 5%,rgba(255,255,170,1) 52%,rgba(255,255,170,1) 95%,rgba(255,255,255,1) 100%); W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+
+                    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=1 ); */ /* IE6-9 */
+    rgb(255, 255, 170);
     }
 
 	button {
@@ -1278,11 +1318,39 @@ input:hover {
 
 #chapter8 ol li p{
     color: black;
-    font-family: "Georgia, serif";
+/*     font-family: "Georgia, serif";
+     */    
+    font-family: "Verdana";
     font-weight: normal;
-    font-size: 12px;
+    font-size: 10px;
     line-height: 1.1em;
+    padding:3px;
+    border-radius: 8px;
+
+/*     background-color: #f4f4f4;
+     */}
+
+#chapter8 ol li p a{
+    color:black;
+    text-decoration: underline;
 }
+
+#chapter8 ol li p a:hover{
+    color:#f30;
+}
+
+#chapter8 ol li p:hover{
+    background-color:rgb(255, 213, 203);
+    padding:3px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+#chapter8 ol li:hover{
+    color:#f30;
+}
+
+
 .sidenote {
     opacity: 0;
     left: 40px;
@@ -1325,9 +1393,12 @@ a sup{
     text-decoration: none;
 }
 
+sup:hover{
+    text-decoration: none;
+}
 a sup:hover{
     color:#f30;
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 li{
