--- a/webdesign/Post-MoneyLab_0105/lambdaCSS.css
+++ b/webdesign/Post-MoneyLab_0105/lambdaCSS.css
@@ -58,13 +58,15 @@ Easy changes :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-
 
 /* Background-color of text on selection */
 ::-moz-selection {
-	background-color: #FFA;
-	color: #000;
+/* 	background-color: #FFA;
+	 */	color: #000;
+    background-color:rgba(219, 219, 219, 0.79);
 }
 
 ::selection {
-	background-color: #FFA;
-	color: #000;
+/* 	background-color: #FFA;
+	 */	color: #000;
+    background-color:rgba(219, 219, 219, 0.79);
 }
 
 a, a:visited{
@@ -224,13 +226,9 @@ Defines the typography for texts in reader */
     -webkit-margin-start: 0px;
     -webkit-margin-end: 0px;
     overflow-y: hidden;
- /*box-shadow:-40px -50px 40px -10px darkblue, 40px 50px 60px -10px darkblue, -20px -30px 40px -10px darkblue, 20px 30px 40px -10px darkblue, -100px 100px 40px -10px darkblue; */
-/*     box-shadow: 0px 5px 180px 130px #a5a5a5, 0px -5px 180px 130px #a5a5a5;
-    background-color:#a5a5a5;  */
-vertical-align: middle;
-    border-radius: 10px;
-/*     font-family: "Georgia";
-     */    letter-spacing: 2%;
+    vertical-align: middle;
+    letter-spacing: 2%;
+    border-top: 1px solid #8e8e8e;
 }
 
 .shadow{
@@ -294,7 +292,6 @@ vertical-align: middle;
     -webkit-column-count: 2;
     -moz-column-count: 2;
     column-count: 2;
-    border-bottom: 1px solid #dbdbdb;
 }
 
 .references p{
@@ -370,27 +367,25 @@ body{
 ************************************/
     body {
         margin: 0;
-/*         background-color:rgba(255, 51, 0, 0.10);
-         */   
-        color: black;
-    background-color:#fafafa;
+        color:black;
+        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,f7f7f7+77,dbdbdb+100 */
+        background: rgb(255,255,255); /* Old browsers */
+        background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(247,247,247,1) 77%, rgba(219,219,219,1) 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 77%,rgba(219,219,219,1) 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 77%,rgba(219,219,219,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#dbdbdb',GradientType=0 ); /* IE6-9 */
+
+
+        background-attachment: fixed;
+
+
+
     }	
 
 /*******THE CONTENT********************/
 	#content {
         opacity: 0;
-        /*visibility: hidden;*/
-/*
-		margin-left: 5%;
-		margin-right: -10%;
-        padding-right: 10%;
-*/
-        /*width: 55%;*/
-       
-       /*FOR SMALLER DEVICES: */
-        /* width: 100%;
-        padding-left: 10%;
-        padding-right: 15%;*/
+        margin-bottom: 100px !important;
         background-color:white;
 }
 	
@@ -481,26 +476,15 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
 
 /*******MENU WITH THE TOC THAT******************
 ********COMES IN SLIDING FROM THE LEFT*********/
-#menu {				/*basically nav*/
-/*<<<<<<< Updated upstream*/
+#menu {			
     left: -16.66666667%;
     padding: 0;
-/*=======*/
-    /*width:16.66666667%;*/
-/*=======*/
-/*    background-color:#f4f4f4;
-    left: -16.66666667%;*/
-    /*padding: calc(10);*/
-/*>>>>>>> Stashed changes*/
     height: 100%;
     position:fixed;
     overflow: hidden;
-    background-color:#e6e6e6;
-    /* -webkit-box-shadow: 10px 0px 31px -10px rgba(61,61,61,0.67);
--moz-box-shadow: 10px 0px 31px -10px rgba(61,61,61,0.67);
-box-shadow: 10px 0px 31px -10px rgba(61,61,61,0.67); */
-    
-    }
+    background-color:transparent;
+    border-right: 1px solid #f4f4f4;
+  }
 
 
 /********************************************************
@@ -524,14 +508,8 @@ Table of content is contained in pushmenu, it shows the different parts of the b
 	-webkit-margin-start: 0;
 	-webkit-margin-end: 0;
 	margin:10px;
-/*<<<<<<< Updated upstream*/
     text-transform:uppercase;
     text-align: center;
-/*=======
-    text-transform: uppercase;
-    text-align: right;
-    border-top: 1px solid black;
->>>>>>> Stashed changes*/
     padding-top:4px;
     border-radius: 8px;
     background-color:rgba(255, 255, 255, 1);
@@ -938,14 +916,37 @@ z-index:99;
 ******** ARROWS *************
 ****************************/
 
-#arrows {
-	position: fixed;
-	right: 14px;
-	top: 50%;
-    z-index: 99;
+#arrows{
+    color: black;
 }
 
+#arrows #up {
+    position: fixed;
+    top: 45%;
+    z-index: 99;
+    font-size: 20px;
+    color: black;
+}
 
+#arrows #down {
+    position: fixed;
+    top: 50%;
+    z-index: 99;
+    font-size: 20px;
+    color: black;
+}
+
+#arrows #down a, #arrows #up a{
+    color:black !important;
+}
+
+.fa-long-arrow-down, .fa-long-arrow-up, .fa-arrow-down, .fa-arrow-up, .fa-chevron-down, .fa-chevron-up{
+    color:#8e8e8e;
+}
+
+.fa-long-arrow-down:hover, .fa-long-arrow-up:hover, .fa-arrow-down:hover, .fa-arrow-up:hover, .fa-chevron-down:hover, .fa-chevron-up:hover{
+    color:#f30;
+}
 
 /********************************
      7-2. SEARCH BOX (right)
@@ -1195,14 +1196,7 @@ input:hover {
 /********CITATIONS************************/
 
     .underline {
-        background-color:
-            /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffaa+5,ffffaa+52,ffffaa+95,ffffff+100 */
-           /*  background: rgb(255,255,255); Old browsers
-                    background: -moz-linear-gradient(left,  rgba(255,255,255,1) 0%, rgba(255,255,170,1) 5%, rgba(255,255,170,1) 52%, rgba(255,255,170,1) 95%, rgba(255,255,255,1) 100%); FF3.6-15
-                    background: -webkit-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,170,1) 5%,rgba(255,255,170,1) 52%,rgba(255,255,170,1) 95%,rgba(255,255,255,1) 100%); Chrome10-25,Safari5.1-6
-                    background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,170,1) 5%,rgba(255,255,170,1) 52%,rgba(255,255,170,1) 95%,rgba(255,255,255,1) 100%); W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+
-                    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=1 ); */ /* IE6-9 */
-    rgb(255, 255, 170);
+        background-color:rgba(255, 255, 69, 0.48);
     }
 
 	button {
@@ -1500,7 +1494,8 @@ ol {
     background-color:rgba(255, 78, 0, 0.25); */
     border:none;
     background-color: #e6e6e6;
-
+    background-color:white;
+    border-left: 1px solid #f4f4f4;
 }
 
 #menu-right .panel-group, #menu-right .panel-group:hover, #menu-right .panel-group:focus, #menu-right .panel-group:active{
@@ -1606,15 +1601,17 @@ ol {
 }
 
 blockquote {
-    padding: 10px 20px;
+    padding: 10px 40px;
     margin: 0 0 20px;
-    font-size: inherit;
+    font-size: 1.15em;
     border-left: 0px;
+    font-family: "Georgia";
 }
 
-
-
-
+.footer{
+    font-size: 10px;
+    color: #8e8e8e;
+}
 
 
 /********* XS DEVICES MENU **********/
