--- a/last2weeks/lambdaCSS.css
+++ b/last2weeks/lambdaCSS.css
@@ -58,27 +58,30 @@ Easy changes :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-
 
 /* Background-color of text on selection */
 ::-moz-selection {
-/* 	background-color: #FFA;
-	 */	color: #000;
-    background-color:#f4f4f4;
+/*     color: #000;
+    background-color:#f4f4f4; */
 }
 
 ::selection {
-/* 	background-color: #FFA;
-	 */	color: #000;
-    background-color:#f4f4f4;
+/*     color: #000;
+    background-color:#f4f4f4; */
 }
 
 a, a:visited{
-    color: black;
+    color:#ff3300;
 }
 
 a:hover, a:active,  a:focus  {
     color:#ff3300;
+    text-decoration: none;
+    border-color: inherit;
 }
 
 
-
+hr{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
 
 
 /* ******************************************************* 3. INFO BOX (TOP) ******************** */
@@ -100,6 +103,8 @@ a:hover, a:active,  a:focus  {
     background: -webkit-linear-gradient(top,  rgba(244,244,244,1) 0%,rgba(247,247,247,1) 29%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom,  rgba(244,244,244,1) 0%,rgba(247,247,247,1) 29%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f4f4f4', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+    text-rendering: optimizeSpeed;
+
 }
 
 .breadcrumb {
@@ -246,6 +251,7 @@ Defines the typography for texts in reader */
     -webkit-margin-after: 15px;
     -webkit-margin-start: 0px;
     -webkit-margin-end: 0px;
+    color: #222222;
 }
 
 /* Font weight */
@@ -255,12 +261,10 @@ Defines the typography for texts in reader */
 
 /* Font-size for the reading text: !! do not change the units (em) to pixels !! */
 .section p {
-    font-size: 1.8em;
+    font-size: 2em;
     line-height: 1.75em;
-/*
-    padding-left:-10px;
-   margin-left:-10px;
-*/
+    text-rendering: optimizeLegibility;
+
 }
 
 /* author: the way the name of the author for each chapter displays */
@@ -294,7 +298,7 @@ Defines the typography for texts in reader */
 }
 
 .references p{
-    font-size: 1.2em;
+    font-size: 1.4em;
     line-height: 1.4em;
     hyphens: auto;
     word-wrap: break-word;
@@ -304,13 +308,12 @@ Defines the typography for texts in reader */
 }
 
 .references a{
-    color:black;
-    text-decoration: underline;
+    color:#f30;
 }
 
 .references a:hover{
     color:#f30;
-    text-decoration: none;
+    text-decoration: underline;
 }
 
 .references h3{
@@ -366,17 +369,17 @@ body{
 body {
         margin: 0;
         color:black;
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,f7f7f7+71,f4f4f4+100 */
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,f7f7f7+64,c9c9c9+100 */
     background: rgb(255,255,255); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(247,247,247,1) 71%, rgba(244,244,244,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 71%,rgba(244,244,244,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 71%,rgba(244,244,244,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f4f4f4',GradientType=0 ); /* IE6-9 */
+    background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(247,247,247,1) 64%, rgba(201,201,201,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 64%,rgba(201,201,201,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 64%,rgba(201,201,201,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#c9c9c9',GradientType=0 ); /* IE6-9 */
 
         background-attachment: fixed;
         color: black;
         overflow-x: hidden;
-
+    text-rendering: optimizeSpeed;
     }	
 
 /*******THE CONTENT********************/
@@ -385,7 +388,6 @@ body {
         margin-bottom: 100px !important;
         background-color:white;
         margin-top: 80px;
-        padding-top: 20px;
 }
 	
 
@@ -404,7 +406,7 @@ body {
     position: absolute;
     top: 0;
     padding: 0; */
-    width:2px;
+    width:100%;
     height: 0%;
     max-height: 100%;
     position: absolute;
@@ -413,12 +415,7 @@ body {
 }
 
 .horizScroll {
-    background-color: rgb(255, 213, 203);
-}
-
-.subScroll {
-    border-radius: 5px;
-    background-color: rgba(255, 69, 0, 0.23);
+    background-color:rgba(255, 51, 0, 0.1);
 }
 
 .horizScroll, .subScroll{
@@ -427,7 +424,7 @@ body {
 
 #toc_wrapper {
     cursor: pointer;
-    margin-top:40px;    
+    margin-top:10px;    
 }
 
 #toc_wrapper_print{
@@ -483,22 +480,30 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
     height: 100%;
     position:fixed;
     overflow: hidden;
-    background-color:transparent;
+   
+    
+    /* 
+    
+    background: rgb(255,255,255); Old browsers
+    background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(247,247,247,1) 71%, rgba(244,244,244,1) 100%); FF3.6-15
+    background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 71%,rgba(244,244,244,1) 100%); Chrome10-25,Safari5.1-6
+    background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 71%,rgba(244,244,244,1) 100%); W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f4f4f4',GradientType=0 ); IE6-9 */
+    
+    background-color:white;
+    background-attachment: fixed;    
     border-right: 1px solid #f4f4f4;
     overflow-y: auto;
-  }
+    padding-top:10px;
+  
+}
+
 
 
 /********************************************************
      2-3. TABLE OF CONTENT (left, inside the pushmenu)
 *********************************************************
 Table of content is contained in pushmenu, it shows the different parts of the book and can be clicked to navigate through them */
-
-/* Bloc containing the table of content in the pushmenu */
-#book-toc {
-	margin-left: 5px;
-	width: 100%;
-}
 
 /* Table of contents: title for big part */
 #menu h2 {
@@ -510,17 +515,19 @@ Table of content is contained in pushmenu, it shows the different parts of the b
     text-align: left;
     padding-top:4px;
     border-radius: 8px;
-    background-color:rgba(255, 255, 255, 1);
-    box-shadow: 5px 5px 3px rgba(136, 136, 136, 0.03);
+    background-color:white;
     font-size: 14px;
     line-height: 18px;
+    -webkit-box-shadow: 0px 0px 18px 1px rgba(142,142,142,0.08);
+    -moz-box-shadow: 0px 0px 18px 1px rgba(142,142,142,0.08);
+    box-shadow: 0px 0px 18px 1px rgba(142,142,142,0.08);
 }
 
 /* Table of contents: when the user goes over a part of the book */
 #menu h2:hover{
-    color:white;
-    background-color:#ff3300;
     cursor: pointer;
+    color: black;
+
 }
 
 #toc_wrapper h2 a {
@@ -581,15 +588,15 @@ Table of content is contained in pushmenu, it shows the different parts of the b
     width: 5px;
     position: fixed;	
     background: #f30; /* For browsers that do not support gradients */
-/*     background: -webkit-linear-gradient(#f30, rgb(255, 213, 203), rgba(255, 255, 69, 1), #1C33E5); For Safari 5.1 to 6.0
+background: -webkit-linear-gradient(#f30, rgb(255, 213, 203), rgba(255, 255, 69, 1), #1C33E5); For Safari 5.1 to 6.0
     background: -o-linear-gradient(#f30, rgb(255, 213, 203), rgba(255, 255, 69, 1), #1C33E5); For Opera 11.1 to 12.0
     background: -moz-linear-gradient(#f30, rgb(255, 213, 203), rgba(255, 255, 69, 1), #1C33E5); For Firefox 3.6 to 15
-    background: linear-gradient(#f30, rgb(255, 213, 203), rgba(255, 255, 69, 1), #1C33E5); Standard syntax  */
+    background: linear-gradient(#f30, rgb(255, 213, 203), rgba(255, 255, 69, 1), #1C33E5); Standard syntax  
     
-    background: -webkit-linear-gradient(#f30, rgb(255, 213, 203)); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#f30, rgb(255, 213, 203)); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#f30, rgb(255, 213, 203)); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(#f30, rgb(255, 213, 203)); /* Standard syntax */
+/*     background: -webkit-linear-gradient(#f30, rgb(255, 213, 203)); For Safari 5.1 to 6.0
+    background: -o-linear-gradient(#f30, rgb(255, 213, 203)); For Opera 11.1 to 12.0
+    background: -moz-linear-gradient(#f30, rgb(255, 213, 203)); For Firefox 3.6 to 15
+    background: linear-gradient(#f30, rgb(255, 213, 203)); Standard syntax */
 }
 
 
@@ -640,20 +647,10 @@ left:0px;
 }
 
 .toggle_menu {
-		/*z-index: 1000;
-		cursor: pointer;
-		position: fixed;
-        margin-left:10px;
-		width: 50px;
-		height: 50px;
-		background-image: url('css/image/arrow-right.png');
-		background-size: 13px 14px;
-        background-repeat: no-repeat;
-		/*background-color: blue;*/
     padding:1px;
     padding-top:10px;
     padding-bottom: 10px;
-          position: fixed;
+    position: fixed;
     bottom:20px;
     left:0px;
     font-size: 18px;
@@ -838,24 +835,35 @@ z-index:99;
 /**************************************
 ******* NEXT AND PREV *****************
 **************************************/
-	.search_nav {
-		/*position: absolute;*/
-		position: fixed;
-		margin-top: 15px;
-        margin-left:0px;
-	}
+#buttons_wrapper{
+    display: none;
+}
+
+.search_nav {
+    /*position: absolute;*/
+	position: fixed;
+		margin-top: -35px;
+        background-color:transparent;
+        box-shadow: none;
+        border:none;
+}
 
 	#prev {
-        position: fixed;
-        margin-top:-20px;
-        margin-left:60px;
+        right:35px;
     }
 
 	#next {
-        position: fixed;
-        margin-left:110px;
-            margin-top:-20px;
+        right:15px;
 	}
+
+#cancel{
+    position: fixed;
+    margin-top: -35px;
+    background-color:transparent;
+    box-shadow: none;
+    border:none;
+    right:55px;
+}
 
 	.search-found {
 		color: black;
@@ -869,15 +877,8 @@ z-index:99;
 		background-color: #BFBFBF;
 	}
 
-	#live-search {
-    right: 0;
-    display: inline-block;
-    margin-top:20px;
-	}
 
-	#buttons_wrapper{
-		display: none;
-	}
+
 
 
 /****************************
@@ -921,6 +922,23 @@ z-index:99;
 *********************************
 Search box is where the user can enter keyword (in input) and look for words in text */
 
+#live-search {
+    margin-bottom: 10px;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: 30px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: black;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #f4f4f4;
+    border-radius: 4px;
+}
 
 /* where the user writes */
 fieldset {
@@ -940,8 +958,6 @@ fieldset {
 	font-size: 13px;
 	font-family: "Hkgrotesk";
     text-align: right;
-    margin-top:-38px;
-    margin-left:100px;
     position: fixed;
     color: #afafaf;
     z-index: 99;
@@ -961,10 +977,6 @@ input {
 	color: #000;
 	padding: 0;
     border-bottom: 1px solid #868686;
-    padding-left: 4px;
-    margin-top:  -40px;
-    position: absolute;
-    right:50px;
 }
 
 input:hover {
@@ -1034,7 +1046,7 @@ input:hover {
 }
 
 .search-notfound {
-    color: #BFBFBF;
+    color: black;
 }
 
 .highlight {
@@ -1177,7 +1189,7 @@ input:hover {
     position: fixed;
     }
 
-    .full-citation {
+.full-citation {
     text-align: left;
     word-wrap: break-word;
     background-color: #ffffff;
@@ -1191,7 +1203,8 @@ input:hover {
         margin: 0px;
         border-radius: 2px;
         color: #5b5b5b;
-    }
+    border:1px dashed #dbdbdb;
+}
 
     #citation-box {
       top: 10%;
@@ -1228,6 +1241,7 @@ input:hover {
     /*padding-right: 2%;*/
 /*     background-color:white;
     height: 999999999999999999999999999px; */
+
 }
 
 #chapter8 {
@@ -1235,8 +1249,7 @@ input:hover {
 	/*width: 23%;*/
 /* 	position: relative;
 	    height: auto; */
-  /*  background-color: white; */
-    
+
 }
 
 #chapter8 ol {
@@ -1244,11 +1257,12 @@ input:hover {
     list-style: decimal;
     text-indent: 0px;
    margin-left:25px;
-    font-family: "Helvetica";
     font-size:9px;
     line-height: 12px;
     counter-reset: item;
     list-style-type: none;
+    color:#f30;
+
 }
 
 #chapter8 ol li { 
@@ -1265,8 +1279,6 @@ input:hover {
 #chapter8 ol li {
     padding:0px 3px 5px 3px;
     position: absolute;
-    font-family: "Helvetica";
-    font-weight: bold;
     font-size: 1.25em;
     line-height: 1.2em;
     word-wrap:break-word;
@@ -1286,17 +1298,23 @@ input:hover {
 }
 
 #chapter8 ol li p a{
-    color:black;
-    text-decoration: underline;
+    color:#f30;
+    text-decoration: none;
+
 }
 
 #chapter8 ol li p a:hover{
     color:#f30;
     text-decoration: underline;
+
 }
 .sidenote {
-    opacity: 0;
     left: 40px;
+    -webkit-margin-after: 3px;
+    border: solid 1px #fafafa;
+    padding: 2px;
+    padding-top: 4px;
+    background-color: rgba(255, 51, 0, 0.42);
 }
 
 .sidenote p{
@@ -1306,7 +1324,6 @@ input:hover {
 
 .footnoteRef{
     text-decoration: none;
-   /* color: #ff3300; */
     color: #FF5500;
 }
 .footnoteRef:hover{
@@ -1314,26 +1331,15 @@ input:hover {
 }
 
 .focusSidenote{
- /*   z-index: 9999999999999999999999999999999999;
-    -webkit-box-shadow: 5px -2px 8px 1px rgba(0,0,0,0.21);
-    -moz-box-shadow: 5px -2px 8px 1px rgba(0,0,0,0.21);
-    box-shadow: 5px -2px 8px 1px rgba(0,0,0,0.21);*/
-    /*background-color: #CE6565;*/
     opacity: .7;
-
 }
 
 /********************************************/
 
-
-
-
 a sup{
-
+    font-family: "HKGrotesk";
     vertical-align: 75%;
-    color: black;
-    font-family: "Helvetica";
-    font-weight: bold;    
+    color:#f30;
     text-decoration: none;
     /*font-size: small;*/
 }
@@ -1344,7 +1350,7 @@ a sup:hover{
 }
 
 sup:hover, sup a:hover{
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 li{
@@ -1362,34 +1368,24 @@ ol {
 
 /******** TUNNING BOOTSTRAP ********/
 
-
-
-.btn-group-vertical .btn-primary {
-    color: black;
-    background-color: #f4f4f4;
-    border: 0px solid #a0a0a0;
-    text-align: left;
-    text-transform: none;
+.section .keyword-toggle .btn-default {
+    border-radius:5px;
+    padding: 2px;
+    padding-left:5px;
+    padding-right: 5px;
+    margin-right:4px;
+    margin-bottom: 8px;
+    background-color: rgba(28, 51, 229, 0.1);
+    color: #1C33E5;
+    border:none;
+    height: auto;
+}
+.section .keyword-toggle .btn.active{
+    box-shadow: inset 0 3px 5px rgba(0,0,0,.135);
+    background-color: rgba(28, 51, 229, 0.3);
+}
+.section .keyword-toggle .btn-default:focus{
     
-}
-
-.btn-group-vertical .btn-primary:hover{
-    background-color: #e6e6e6;
-    cursor: pointer;
-    border-color: #a0a0a0;
-    color: black;
-    text-transform: none;
-    border: 0px solid #a0a0a0;
-}
-
-.btn-group-vertical .btn-primary:active{
-    color: black;
-    background-color:#f4f4f4; !important;
-}
-
-.btn-primary:focus{
-    color: black;
-    background-color:#f4f4f4; !important;
 }
 
 .section .btn-default {
@@ -1437,11 +1433,29 @@ ol {
     color:black !important;
 }
 
+.extra-btn{
+    background-color: #dbdbdb;
+    border-radius:5px;
+    padding: 5px;
+    padding-top:2px;
+    padding-bottom: 2px;
+    margin-right:4px;
+    line-height: 2em;
+    color: black !important;
+    white-space:nowrap;
+}
+
+.extra-btn:hover{
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+    white-space:nowrap;
+}
+
 #menu-right{
     position: fixed;
     right:0px;
     padding:10px;
-    padding-top:15px;
     height: 100%;
 /*     background-color:  #f4f4f4;
     background-color:rgba(255, 78, 0, 0.25); */
@@ -1511,6 +1525,73 @@ ol {
     color: black;
 }
 
+/************** tools on selection ************/
+
+.on-selection{
+    display: none;
+    width: auto;
+    height: auto; 
+    position: fixed;  
+    margin: 0; 
+    padding: 0; 
+    -webkit-filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.3));
+    filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.3)); 
+    z-index:9999999999999999999;
+}
+
+.btn-group-vertical .btn-primary {
+    color: black;
+    background-color: #f4f4f4;
+    border: 0px solid #a0a0a0;
+    text-align: left;
+    text-transform: none;
+
+}
+
+.btn-group-vertical .btn-primary:hover{
+    background-color: #e6e6e6;
+    cursor: pointer;
+    border-color: #a0a0a0;
+    color: black;
+    text-transform: none;
+    border: 0px solid #a0a0a0;
+}
+
+.btn-group-vertical .btn-primary:active{
+    color: black;
+    background-color:#f4f4f4; !important;
+}
+
+.btn-primary:focus{
+    color: black;
+    background-color:#f4f4f4; !important;
+}
+
+
+.delete-underline{
+    background-color: #f4f4f4;
+    border: 0px solid #a0a0a0;
+    display: none;
+    position: fixed;
+    width: auto; 
+    height: auto; 
+    margin: 0; 
+    padding: 0; 
+    -webkit-filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.3));
+    filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.3)); 
+    z-index:9999999999999999999;  
+    padding: 4px;
+}
+
+.delete-underline:hover{
+    background-color: #e6e6e6;
+    cursor: pointer;
+    border-color: #a0a0a0;
+    color: black;
+    text-transform: none;
+    border: 0px solid #a0a0a0;
+}
+
 
 /* Tooltip */
 .tooltip > .tooltip-inner {
@@ -1569,17 +1650,19 @@ blockquote {
 
 /********* Lines counter **********/
 
-#par_number{
+#par_numbr{
     height: auto;
+    z-index: 0;
 }
 
 .p_number{
     position:absolute;
     right:20px;
     margin:0px;
+    line-height: 30px;
     vertical-align: top;
     text-align: right;
-    color: #bfbfbf;
+    color: #c9c9c9;
     font-size:12px;
 }
 
